tests/snapshots/compile_core_o_all__scrutinee_reconstruction.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/scrutinee_reconstruction.hvm
---
@None = (* (a a))

@Option.or = ((@Option.or__C0 ((a a) b)) b)

@Option.or__C0 = (a (* b))
  & @Some ~ (a b)

@Some = (a ((a b) (* b)))

@main = b
  & @Option.or ~ (a (@None b))
  & @Some ~ (5 a)
