tests/snapshots/compile_core_o_all__spacing.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/spacing.hvm
---
@main = ({b c} d)
  & (a a) ~ (b (c d))
