tests/snapshots/compile_core_o_all__spacing2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/spacing2.hvm
---
@main = c
  & (a a) ~ ((b b) c)
