tests/snapshots/compile_core_o_all__str.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/str.hvm
---
@String.cons = (a (b ((a (b c)) (* c))))

@String.nil = (* (a a))

@main = f
  & @String.cons ~ (109 (e f))
  & @String.cons ~ (97 (d e))
  & @String.cons ~ (105 (c d))
  & @String.cons ~ (110 (b c))
  & @String.cons ~ (32 (a b))
  & @String.cons ~ (61 (@String.nil a))
