tests/snapshots/compile_core_o_all__sum_predicates.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/sum_predicates.hvm
---
@main = a
  & @sum_pred ~ (8 (5 a))

@sum_pred = (?((@sum_pred__C1 @sum_pred__C2) a) a)

@sum_pred__C0 = (a ($(:[+] $(a b)) b))

@sum_pred__C1 = (?((0 (a a)) b) b)

@sum_pred__C2 = (b (?(((a a) @sum_pred__C0) (b c)) c))
