tests/snapshots/compile_core_o_all__tagged_sup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/tagged_sup.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_core_o_all/tagged_sup.hvm :
Tagged terms not supported for hvm32.
[0m  1 | a =[4m[31m [0m#i {λx x λx x}[0m
