tests/snapshots/compile_core_o_all__unapplied_eta.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/unapplied_eta.hvm
---
@Id = (a a)

@main = a
  & @Id ~ a
